--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="home.html">Welcome!</a>
+            <a class="navbar-brand" href="index.html">Welcome!</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
-                    <li class="nav-item"><a class="nav-link" href="home.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="aboutme.html">About Me</a></li>
                     <li class="nav-item"><a class="nav-link" href="workexperience.html">Work and Training Experience</a></li>
                 </ul>
